lab4/parser.out
Created by PLY version 3.8 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> blocks
Rule 2     blocks -> blocks block
Rule 3     blocks -> <empty>
Rule 4     block -> declaration
Rule 5     block -> fundef
Rule 6     block -> instruction
Rule 7     declarations -> declarations declaration
Rule 8     declarations -> <empty>
Rule 9     declaration -> TYPE inits ;
Rule 10    declaration -> error ;
Rule 11    inits -> inits , init
Rule 12    inits -> init
Rule 13    init -> ID = expression
Rule 14    instructions -> instructions instruction
Rule 15    instructions -> instruction
Rule 16    instruction -> print_instr
Rule 17    instruction -> labeled_instr
Rule 18    instruction -> assignment
Rule 19    instruction -> choice_instr
Rule 20    instruction -> while_instr
Rule 21    instruction -> repeat_instr
Rule 22    instruction -> return_instr
Rule 23    instruction -> break_instr
Rule 24    instruction -> continue_instr
Rule 25    instruction -> compound_instr
Rule 26    instruction -> expression ;
Rule 27    print_instr -> PRINT expression ;
Rule 28    print_instr -> PRINT error ;
Rule 29    labeled_instr -> ID : instruction
Rule 30    assignment -> ID = expression ;
Rule 31    choice_instr -> IF ( condition ) instruction
Rule 32    choice_instr -> IF ( condition ) instruction ELSE instruction
Rule 33    choice_instr -> IF ( error ) instruction
Rule 34    choice_instr -> IF ( error ) instruction ELSE instruction
Rule 35    while_instr -> WHILE ( condition ) instruction
Rule 36    while_instr -> WHILE ( error ) instruction
Rule 37    repeat_instr -> REPEAT instructions UNTIL condition ;
Rule 38    return_instr -> RETURN expression ;
Rule 39    continue_instr -> CONTINUE ;
Rule 40    break_instr -> BREAK ;
Rule 41    compound_instr -> { declarations instructions }
Rule 42    condition -> expression
Rule 43    const -> INTEGER
Rule 44    const -> FLOAT
Rule 45    const -> STRING
Rule 46    expression -> ID
Rule 47    expression -> const
Rule 48    expression -> expression + expression
Rule 49    expression -> expression - expression
Rule 50    expression -> expression * expression
Rule 51    expression -> expression / expression
Rule 52    expression -> expression % expression
Rule 53    expression -> expression | expression
Rule 54    expression -> expression & expression
Rule 55    expression -> expression ^ expression
Rule 56    expression -> expression AND expression
Rule 57    expression -> expression OR expression
Rule 58    expression -> expression SHL expression
Rule 59    expression -> expression SHR expression
Rule 60    expression -> expression EQ expression
Rule 61    expression -> expression NEQ expression
Rule 62    expression -> expression > expression
Rule 63    expression -> expression < expression
Rule 64    expression -> expression LE expression
Rule 65    expression -> expression GE expression
Rule 66    expression -> ( expression )
Rule 67    expression -> ( error )
Rule 68    expression -> ID ( expr_list_or_empty )
Rule 69    expression -> ID ( error )
Rule 70    expr_list_or_empty -> expr_list
Rule 71    expr_list_or_empty -> <empty>
Rule 72    expr_list -> expr_list , expression
Rule 73    expr_list -> expression
Rule 74    fundef -> TYPE ID ( args_list_or_empty ) compound_instr
Rule 75    args_list_or_empty -> args_list
Rule 76    args_list_or_empty -> <empty>
Rule 77    args_list -> args_list , arg
Rule 78    args_list -> arg
Rule 79    arg -> TYPE ID

Terminals, with rules where they appear

%                    : 52
&                    : 54
(                    : 31 32 33 34 35 36 66 67 68 69 74
)                    : 31 32 33 34 35 36 66 67 68 69 74
*                    : 50
+                    : 48
,                    : 11 72 77
-                    : 49
/                    : 51
:                    : 29
;                    : 9 10 26 27 28 30 37 38 39 40
<                    : 63
=                    : 13 30
>                    : 62
AND                  : 56
BREAK                : 40
CONTINUE             : 39
ELSE                 : 32 34
EQ                   : 60
FLOAT                : 44
GE                   : 65
ID                   : 13 29 30 46 68 69 74 79
IF                   : 31 32 33 34
INTEGER              : 43
LE                   : 64
NEQ                  : 61
OR                   : 57
PRINT                : 27 28
REPEAT               : 37
RETURN               : 38
SHL                  : 58
SHR                  : 59
STRING               : 45
TYPE                 : 9 74 79
UNTIL                : 37
WHILE                : 35 36
^                    : 55
error                : 10 28 33 34 36 67 69
{                    : 41
|                    : 53
}                    : 41

Nonterminals, with rules where they appear

arg                  : 77 78
args_list            : 75 77
args_list_or_empty   : 74
assignment           : 18
block                : 2
blocks               : 1 2
break_instr          : 23
choice_instr         : 19
compound_instr       : 25 74
condition            : 31 32 35 37
const                : 47
continue_instr       : 24
declaration          : 4 7
declarations         : 7 41
expr_list            : 70 72
expr_list_or_empty   : 68
expression           : 13 26 27 30 38 42 48 48 49 49 50 50 51 51 52 52 53 53 54 54 55 55 56 56 57 57 58 58 59 59 60 60 61 61 62 62 63 63 64 64 65 65 66 72 73
fundef               : 5
init                 : 11 12
inits                : 9 11
instruction          : 6 14 15 29 31 32 32 33 34 34 35 36
instructions         : 14 37 41
labeled_instr        : 17
print_instr          : 16
program              : 0
repeat_instr         : 21
return_instr         : 22
while_instr          : 20

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . blocks
    (2) blocks -> . blocks block
    (3) blocks -> .

    TYPE            reduce using rule 3 (blocks -> .)
    error           reduce using rule 3 (blocks -> .)
    PRINT           reduce using rule 3 (blocks -> .)
    ID              reduce using rule 3 (blocks -> .)
    IF              reduce using rule 3 (blocks -> .)
    WHILE           reduce using rule 3 (blocks -> .)
    REPEAT          reduce using rule 3 (blocks -> .)
    RETURN          reduce using rule 3 (blocks -> .)
    BREAK           reduce using rule 3 (blocks -> .)
    CONTINUE        reduce using rule 3 (blocks -> .)
    {               reduce using rule 3 (blocks -> .)
    (               reduce using rule 3 (blocks -> .)
    INTEGER         reduce using rule 3 (blocks -> .)
    FLOAT           reduce using rule 3 (blocks -> .)
    STRING          reduce using rule 3 (blocks -> .)
    $end            reduce using rule 3 (blocks -> .)

    program                        shift and go to state 1
    blocks                         shift and go to state 2

state 1

    (0) S' -> program .



state 2

    (1) program -> blocks .
    (2) blocks -> blocks . block
    (4) block -> . declaration
    (5) block -> . fundef
    (6) block -> . instruction
    (9) declaration -> . TYPE inits ;
    (10) declaration -> . error ;
    (74) fundef -> . TYPE ID ( args_list_or_empty ) compound_instr
    (16) instruction -> . print_instr
    (17) instruction -> . labeled_instr
    (18) instruction -> . assignment
    (19) instruction -> . choice_instr
    (20) instruction -> . while_instr
    (21) instruction -> . repeat_instr
    (22) instruction -> . return_instr
    (23) instruction -> . break_instr
    (24) instruction -> . continue_instr
    (25) instruction -> . compound_instr
    (26) instruction -> . expression ;
    (27) print_instr -> . PRINT expression ;
    (28) print_instr -> . PRINT error ;
    (29) labeled_instr -> . ID : instruction
    (30) assignment -> . ID = expression ;
    (31) choice_instr -> . IF ( condition ) instruction
    (32) choice_instr -> . IF ( condition ) instruction ELSE instruction
    (33) choice_instr -> . IF ( error ) instruction
    (34) choice_instr -> . IF ( error ) instruction ELSE instruction
    (35) while_instr -> . WHILE ( condition ) instruction
    (36) while_instr -> . WHILE ( error ) instruction
    (37) repeat_instr -> . REPEAT instructions UNTIL condition ;
    (38) return_instr -> . RETURN expression ;
    (40) break_instr -> . BREAK ;
    (39) continue_instr -> . CONTINUE ;
    (41) compound_instr -> . { declarations instructions }
    (46) expression -> . ID
    (47) expression -> . const
    (48) expression -> . expression + expression
    (49) expression -> . expression - expression
    (50) expression -> . expression * expression
    (51) expression -> . expression / expression
    (52) expression -> . expression % expression
    (53) expression -> . expression | expression
    (54) expression -> . expression & expression
    (55) expression -> . expression ^ expression
    (56) expression -> . expression AND expression
    (57) expression -> . expression OR expression
    (58) expression -> . expression SHL expression
    (59) expression -> . expression SHR expression
    (60) expression -> . expression EQ expression
    (61) expression -> . expression NEQ expression
    (62) expression -> . expression > expression
    (63) expression -> . expression < expression
    (64) expression -> . expression LE expression
    (65) expression -> . expression GE expression
    (66) expression -> . ( expression )
    (67) expression -> . ( error )
    (68) expression -> . ID ( expr_list_or_empty )
    (69) expression -> . ID ( error )
    (43) const -> . INTEGER
    (44) const -> . FLOAT
    (45) const -> . STRING

    $end            reduce using rule 1 (program -> blocks .)
    TYPE            shift and go to state 32
    error           shift and go to state 30
    PRINT           shift and go to state 5
    ID              shift and go to state 20
    IF              shift and go to state 21
    WHILE           shift and go to state 6
    REPEAT          shift and go to state 14
    RETURN          shift and go to state 3
    BREAK           shift and go to state 26
    CONTINUE        shift and go to state 28
    {               shift and go to state 31
    (               shift and go to state 10
    INTEGER         shift and go to state 13
    FLOAT           shift and go to state 22
    STRING          shift and go to state 15

    instruction                    shift and go to state 24
    choice_instr                   shift and go to state 4
    repeat_instr                   shift and go to state 7
    return_instr                   shift and go to state 8
    const                          shift and go to state 9
    continue_instr                 shift and go to state 11
    while_instr                    shift and go to state 12
    assignment                     shift and go to state 16
    labeled_instr                  shift and go to state 17
    compound_instr                 shift and go to state 18
    declaration                    shift and go to state 19
    break_instr                    shift and go to state 23
    fundef                         shift and go to state 25
    print_instr                    shift and go to state 27
    expression                     shift and go to state 29
    block                          shift and go to state 33

state 3

    (38) return_instr -> RETURN . expression ;
    (46) expression -> . ID
    (47) expression -> . const
    (48) expression -> . expression + expression
    (49) expression -> . expression - expression
    (50) expression -> . expression * expression
    (51) expression -> . expression / expression
    (52) expression -> . expression % expression
    (53) expression -> . expression | expression
    (54) expression -> . expression & expression
    (55) expression -> . expression ^ expression
    (56) expression -> . expression AND expression
    (57) expression -> . expression OR expression
    (58) expression -> . expression SHL expression
    (59) expression -> . expression SHR expression
    (60) expression -> . expression EQ expression
    (61) expression -> . expression NEQ expression
    (62) expression -> . expression > expression
    (63) expression -> . expression < expression
    (64) expression -> . expression LE expression
    (65) expression -> . expression GE expression
    (66) expression -> . ( expression )
    (67) expression -> . ( error )
    (68) expression -> . ID ( expr_list_or_empty )
    (69) expression -> . ID ( error )
    (43) const -> . INTEGER
    (44) const -> . FLOAT
    (45) const -> . STRING

    ID              shift and go to state 34
    (               shift and go to state 10
    INTEGER         shift and go to state 13
    FLOAT           shift and go to state 22
    STRING          shift and go to state 15

    const                          shift and go to state 9
    expression                     shift and go to state 35

state 4

    (19) instruction -> choice_instr .

    UNTIL           reduce using rule 19 (instruction -> choice_instr .)
    PRINT           reduce using rule 19 (instruction -> choice_instr .)
    ID              reduce using rule 19 (instruction -> choice_instr .)
    IF              reduce using rule 19 (instruction -> choice_instr .)
    WHILE           reduce using rule 19 (instruction -> choice_instr .)
    REPEAT          reduce using rule 19 (instruction -> choice_instr .)
    RETURN          reduce using rule 19 (instruction -> choice_instr .)
    BREAK           reduce using rule 19 (instruction -> choice_instr .)
    CONTINUE        reduce using rule 19 (instruction -> choice_instr .)
    {               reduce using rule 19 (instruction -> choice_instr .)
    (               reduce using rule 19 (instruction -> choice_instr .)
    INTEGER         reduce using rule 19 (instruction -> choice_instr .)
    FLOAT           reduce using rule 19 (instruction -> choice_instr .)
    STRING          reduce using rule 19 (instruction -> choice_instr .)
    TYPE            reduce using rule 19 (instruction -> choice_instr .)
    error           reduce using rule 19 (instruction -> choice_instr .)
    $end            reduce using rule 19 (instruction -> choice_instr .)
    }               reduce using rule 19 (instruction -> choice_instr .)
    ELSE            reduce using rule 19 (instruction -> choice_instr .)


state 5

    (27) print_instr -> PRINT . expression ;
    (28) print_instr -> PRINT . error ;
    (46) expression -> . ID
    (47) expression -> . const
    (48) expression -> . expression + expression
    (49) expression -> . expression - expression
    (50) expression -> . expression * expression
    (51) expression -> . expression / expression
    (52) expression -> . expression % expression
    (53) expression -> . expression | expression
    (54) expression -> . expression & expression
    (55) expression -> . expression ^ expression
    (56) expression -> . expression AND expression
    (57) expression -> . expression OR expression
    (58) expression -> . expression SHL expression
    (59) expression -> . expression SHR expression
    (60) expression -> . expression EQ expression
    (61) expression -> . expression NEQ expression
    (62) expression -> . expression > expression
    (63) expression -> . expression < expression
    (64) expression -> . expression LE expression
    (65) expression -> . expression GE expression
    (66) expression -> . ( expression )
    (67) expression -> . ( error )
    (68) expression -> . ID ( expr_list_or_empty )
    (69) expression -> . ID ( error )
    (43) const -> . INTEGER
    (44) const -> . FLOAT
    (45) const -> . STRING

    error           shift and go to state 36
    ID              shift and go to state 34
    (               shift and go to state 10
    INTEGER         shift and go to state 13
    FLOAT           shift and go to state 22
    STRING          shift and go to state 15

    const                          shift and go to state 9
    expression                     shift and go to state 37

state 6

    (35) while_instr -> WHILE . ( condition ) instruction
    (36) while_instr -> WHILE . ( error ) instruction

    (               shift and go to state 38


state 7

    (21) instruction -> repeat_instr .

    UNTIL           reduce using rule 21 (instruction -> repeat_instr .)
    PRINT           reduce using rule 21 (instruction -> repeat_instr .)
    ID              reduce using rule 21 (instruction -> repeat_instr .)
    IF              reduce using rule 21 (instruction -> repeat_instr .)
    WHILE           reduce using rule 21 (instruction -> repeat_instr .)
    REPEAT          reduce using rule 21 (instruction -> repeat_instr .)
    RETURN          reduce using rule 21 (instruction -> repeat_instr .)
    BREAK           reduce using rule 21 (instruction -> repeat_instr .)
    CONTINUE        reduce using rule 21 (instruction -> repeat_instr .)
    {               reduce using rule 21 (instruction -> repeat_instr .)
    (               reduce using rule 21 (instruction -> repeat_instr .)
    INTEGER         reduce using rule 21 (instruction -> repeat_instr .)
    FLOAT           reduce using rule 21 (instruction -> repeat_instr .)
    STRING          reduce using rule 21 (instruction -> repeat_instr .)
    TYPE            reduce using rule 21 (instruction -> repeat_instr .)
    error           reduce using rule 21 (instruction -> repeat_instr .)
    $end            reduce using rule 21 (instruction -> repeat_instr .)
    }               reduce using rule 21 (instruction -> repeat_instr .)
    ELSE            reduce using rule 21 (instruction -> repeat_instr .)


state 8

    (22) instruction -> return_instr .

    UNTIL           reduce using rule 22 (instruction -> return_instr .)
    PRINT           reduce using rule 22 (instruction -> return_instr .)
    ID              reduce using rule 22 (instruction -> return_instr .)
    IF              reduce using rule 22 (instruction -> return_instr .)
    WHILE           reduce using rule 22 (instruction -> return_instr .)
    REPEAT          reduce using rule 22 (instruction -> return_instr .)
    RETURN          reduce using rule 22 (instruction -> return_instr .)
    BREAK           reduce using rule 22 (instruction -> return_instr .)
    CONTINUE        reduce using rule 22 (instruction -> return_instr .)
    {               reduce using rule 22 (instruction -> return_instr .)
    (               reduce using rule 22 (instruction -> return_instr .)
    INTEGER         reduce using rule 22 (instruction -> return_instr .)
    FLOAT           reduce using rule 22 (instruction -> return_instr .)
    STRING          reduce using rule 22 (instruction -> return_instr .)
    TYPE            reduce using rule 22 (instruction -> return_instr .)
    error           reduce using rule 22 (instruction -> return_instr .)
    $end            reduce using rule 22 (instruction -> return_instr .)
    }               reduce using rule 22 (instruction -> return_instr .)
    ELSE            reduce using rule 22 (instruction -> return_instr .)


state 9

    (47) expression -> const .

    ;               reduce using rule 47 (expression -> const .)
    +               reduce using rule 47 (expression -> const .)
    -               reduce using rule 47 (expression -> const .)
    *               reduce using rule 47 (expression -> const .)
    /               reduce using rule 47 (expression -> const .)
    %               reduce using rule 47 (expression -> const .)
    |               reduce using rule 47 (expression -> const .)
    &               reduce using rule 47 (expression -> const .)
    ^               reduce using rule 47 (expression -> const .)
    AND             reduce using rule 47 (expression -> const .)
    OR              reduce using rule 47 (expression -> const .)
    SHL             reduce using rule 47 (expression -> const .)
    SHR             reduce using rule 47 (expression -> const .)
    EQ              reduce using rule 47 (expression -> const .)
    NEQ             reduce using rule 47 (expression -> const .)
    >               reduce using rule 47 (expression -> const .)
    <               reduce using rule 47 (expression -> const .)
    LE              reduce using rule 47 (expression -> const .)
    GE              reduce using rule 47 (expression -> const .)
    )               reduce using rule 47 (expression -> const .)
    ,               reduce using rule 47 (expression -> const .)


state 10

    (66) expression -> ( . expression )
    (67) expression -> ( . error )
    (46) expression -> . ID
    (47) expression -> . const
    (48) expression -> . expression + expression
    (49) expression -> . expression - expression
    (50) expression -> . expression * expression
    (51) expression -> . expression / expression
    (52) expression -> . expression % expression
    (53) expression -> . expression | expression
    (54) expression -> . expression & expression
    (55) expression -> . expression ^ expression
    (56) expression -> . expression AND expression
    (57) expression -> . expression OR expression
    (58) expression -> . expression SHL expression
    (59) expression -> . expression SHR expression
    (60) expression -> . expression EQ expression
    (61) expression -> . expression NEQ expression
    (62) expression -> . expression > expression
    (63) expression -> . expression < expression
    (64) expression -> . expression LE expression
    (65) expression -> . expression GE expression
    (66) expression -> . ( expression )
    (67) expression -> . ( error )
    (68) expression -> . ID ( expr_list_or_empty )
    (69) expression -> . ID ( error )
    (43) const -> . INTEGER
    (44) const -> . FLOAT
    (45) const -> . STRING

    error           shift and go to state 39
    ID              shift and go to state 34
    (               shift and go to state 10
    INTEGER         shift and go to state 13
    FLOAT           shift and go to state 22
    STRING          shift and go to state 15

    const                          shift and go to state 9
    expression                     shift and go to state 40

state 11

    (24) instruction -> continue_instr .

    UNTIL           reduce using rule 24 (instruction -> continue_instr .)
    PRINT           reduce using rule 24 (instruction -> continue_instr .)
    ID              reduce using rule 24 (instruction -> continue_instr .)
    IF              reduce using rule 24 (instruction -> continue_instr .)
    WHILE           reduce using rule 24 (instruction -> continue_instr .)
    REPEAT          reduce using rule 24 (instruction -> continue_instr .)
    RETURN          reduce using rule 24 (instruction -> continue_instr .)
    BREAK           reduce using rule 24 (instruction -> continue_instr .)
    CONTINUE        reduce using rule 24 (instruction -> continue_instr .)
    {               reduce using rule 24 (instruction -> continue_instr .)
    (               reduce using rule 24 (instruction -> continue_instr .)
    INTEGER         reduce using rule 24 (instruction -> continue_instr .)
    FLOAT           reduce using rule 24 (instruction -> continue_instr .)
    STRING          reduce using rule 24 (instruction -> continue_instr .)
    TYPE            reduce using rule 24 (instruction -> continue_instr .)
    error           reduce using rule 24 (instruction -> continue_instr .)
    $end            reduce using rule 24 (instruction -> continue_instr .)
    }               reduce using rule 24 (instruction -> continue_instr .)
    ELSE            reduce using rule 24 (instruction -> continue_instr .)


state 12

    (20) instruction -> while_instr .

    UNTIL           reduce using rule 20 (instruction -> while_instr .)
    PRINT           reduce using rule 20 (instruction -> while_instr .)
    ID              reduce using rule 20 (instruction -> while_instr .)
    IF              reduce using rule 20 (instruction -> while_instr .)
    WHILE           reduce using rule 20 (instruction -> while_instr .)
    REPEAT          reduce using rule 20 (instruction -> while_instr .)
    RETURN          reduce using rule 20 (instruction -> while_instr .)
    BREAK           reduce using rule 20 (instruction -> while_instr .)
    CONTINUE        reduce using rule 20 (instruction -> while_instr .)
    {               reduce using rule 20 (instruction -> while_instr .)
    (               reduce using rule 20 (instruction -> while_instr .)
    INTEGER         reduce using rule 20 (instruction -> while_instr .)
    FLOAT           reduce using rule 20 (instruction -> while_instr .)
    STRING          reduce using rule 20 (instruction -> while_instr .)
    TYPE            reduce using rule 20 (instruction -> while_instr .)
    error           reduce using rule 20 (instruction -> while_instr .)
    $end            reduce using rule 20 (instruction -> while_instr .)
    }               reduce using rule 20 (instruction -> while_instr .)
    ELSE            reduce using rule 20 (instruction -> while_instr .)


state 13

    (43) const -> INTEGER .

    ;               reduce using rule 43 (const -> INTEGER .)
    +               reduce using rule 43 (const -> INTEGER .)
    -               reduce using rule 43 (const -> INTEGER .)
    *               reduce using rule 43 (const -> INTEGER .)
    /               reduce using rule 43 (const -> INTEGER .)
    %               reduce using rule 43 (const -> INTEGER .)
    |               reduce using rule 43 (const -> INTEGER .)
    &               reduce using rule 43 (const -> INTEGER .)
    ^               reduce using rule 43 (const -> INTEGER .)
    AND             reduce using rule 43 (const -> INTEGER .)
    OR              reduce using rule 43 (const -> INTEGER .)
    SHL             reduce using rule 43 (const -> INTEGER .)
    SHR             reduce using rule 43 (const -> INTEGER .)
    EQ              reduce using rule 43 (const -> INTEGER .)
    NEQ             reduce using rule 43 (const -> INTEGER .)
    >               reduce using rule 43 (const -> INTEGER .)
    <               reduce using rule 43 (const -> INTEGER .)
    LE              reduce using rule 43 (const -> INTEGER .)
    GE              reduce using rule 43 (const -> INTEGER .)
    )               reduce using rule 43 (const -> INTEGER .)
    ,               reduce using rule 43 (const -> INTEGER .)


state 14

    (37) repeat_instr -> REPEAT . instructions UNTIL condition ;
    (14) instructions -> . instructions instruction
    (15) instructions -> . instruction
    (16) instruction -> . print_instr
    (17) instruction -> . labeled_instr
    (18) instruction -> . assignment
    (19) instruction -> . choice_instr
    (20) instruction -> . while_instr
    (21) instruction -> . repeat_instr
    (22) instruction -> . return_instr
    (23) instruction -> . break_instr
    (24) instruction -> . continue_instr
    (25) instruction -> . compound_instr
    (26) instruction -> . expression ;
    (27) print_instr -> . PRINT expression ;
    (28) print_instr -> . PRINT error ;
    (29) labeled_instr -> . ID : instruction
    (30) assignment -> . ID = expression ;
    (31) choice_instr -> . IF ( condition ) instruction
    (32) choice_instr -> . IF ( condition ) instruction ELSE instruction
    (33) choice_instr -> . IF ( error ) instruction
    (34) choice_instr -> . IF ( error ) instruction ELSE instruction
    (35) while_instr -> . WHILE ( condition ) instruction
    (36) while_instr -> . WHILE ( error ) instruction
    (37) repeat_instr -> . REPEAT instructions UNTIL condition ;
    (38) return_instr -> . RETURN expression ;
    (40) break_instr -> . BREAK ;
    (39) continue_instr -> . CONTINUE ;
    (41) compound_instr -> . { declarations instructions }
    (46) expression -> . ID
    (47) expression -> . const
    (48) expression -> . expression + expression
    (49) expression -> . expression - expression
    (50) expression -> . expression * expression
    (51) expression -> . expression / expression
    (52) expression -> . expression % expression
    (53) expression -> . expression | expression
    (54) expression -> . expression & expression
    (55) expression -> . expression ^ expression
    (56) expression -> . expression AND expression
    (57) expression -> . expression OR expression
    (58) expression -> . expression SHL expression
    (59) expression -> . expression SHR expression
    (60) expression -> . expression EQ expression
    (61) expression -> . expression NEQ expression
    (62) expression -> . expression > expression
    (63) expression -> . expression < expression
    (64) expression -> . expression LE expression
    (65) expression -> . expression GE expression
    (66) expression -> . ( expression )
    (67) expression -> . ( error )
    (68) expression -> . ID ( expr_list_or_empty )
    (69) expression -> . ID ( error )
    (43) const -> . INTEGER
    (44) const -> . FLOAT
    (45) const -> . STRING

    PRINT           shift and go to state 5
    ID              shift and go to state 20
    IF              shift and go to state 21
    WHILE           shift and go to state 6
    REPEAT          shift and go to state 14
    RETURN          shift and go to state 3
    BREAK           shift and go to state 26
    CONTINUE        shift and go to state 28
    {               shift and go to state 31
    (               shift and go to state 10
    INTEGER         shift and go to state 13
    FLOAT           shift and go to state 22
    STRING          shift and go to state 15

    return_instr                   shift and go to state 8
    const                          shift and go to state 9
    assignment                     shift and go to state 16
    instruction                    shift and go to state 42
    compound_instr                 shift and go to state 18
    continue_instr                 shift and go to state 11
    labeled_instr                  shift and go to state 17
    print_instr                    shift and go to state 27
    choice_instr                   shift and go to state 4
    repeat_instr                   shift and go to state 7
    break_instr                    shift and go to state 23
    while_instr                    shift and go to state 12
    expression                     shift and go to state 29
    instructions                   shift and go to state 41

state 15

    (45) const -> STRING .

    ;               reduce using rule 45 (const -> STRING .)
    +               reduce using rule 45 (const -> STRING .)
    -               reduce using rule 45 (const -> STRING .)
    *               reduce using rule 45 (const -> STRING .)
    /               reduce using rule 45 (const -> STRING .)
    %               reduce using rule 45 (const -> STRING .)
    |               reduce using rule 45 (const -> STRING .)
    &               reduce using rule 45 (const -> STRING .)
    ^               reduce using rule 45 (const -> STRING .)
    AND             reduce using rule 45 (const -> STRING .)
    OR              reduce using rule 45 (const -> STRING .)
    SHL             reduce using rule 45 (const -> STRING .)
    SHR             reduce using rule 45 (const -> STRING .)
    EQ              reduce using rule 45 (const -> STRING .)
    NEQ             reduce using rule 45 (const -> STRING .)
    >               reduce using rule 45 (const -> STRING .)
    <               reduce using rule 45 (const -> STRING .)
    LE              reduce using rule 45 (const -> STRING .)
    GE              reduce using rule 45 (const -> STRING .)
    )               reduce using rule 45 (const -> STRING .)
    ,               reduce using rule 45 (const -> STRING .)


state 16

    (18) instruction -> assignment .

    UNTIL           reduce using rule 18 (instruction -> assignment .)
    PRINT           reduce using rule 18 (instruction -> assignment .)
    ID              reduce using rule 18 (instruction -> assignment .)
    IF              reduce using rule 18 (instruction -> assignment .)
    WHILE           reduce using rule 18 (instruction -> assignment .)
    REPEAT          reduce using rule 18 (instruction -> assignment .)
    RETURN          reduce using rule 18 (instruction -> assignment .)
    BREAK           reduce using rule 18 (instruction -> assignment .)
    CONTINUE        reduce using rule 18 (instruction -> assignment .)
    {               reduce using rule 18 (instruction -> assignment .)
    (               reduce using rule 18 (instruction -> assignment .)
    INTEGER         reduce using rule 18 (instruction -> assignment .)
    FLOAT           reduce using rule 18 (instruction -> assignment .)
    STRING          reduce using rule 18 (instruction -> assignment .)
    TYPE            reduce using rule 18 (instruction -> assignment .)
    error           reduce using rule 18 (instruction -> assignment .)
    $end            reduce using rule 18 (instruction -> assignment .)
    }               reduce using rule 18 (instruction -> assignment .)
    ELSE            reduce using rule 18 (instruction -> assignment .)


state 17

    (17) instruction -> labeled_instr .

    UNTIL           reduce using rule 17 (instruction -> labeled_instr .)
    PRINT           reduce using rule 17 (instruction -> labeled_instr .)
    ID              reduce using rule 17 (instruction -> labeled_instr .)
    IF              reduce using rule 17 (instruction -> labeled_instr .)
    WHILE           reduce using rule 17 (instruction -> labeled_instr .)
    REPEAT          reduce using rule 17 (instruction -> labeled_instr .)
    RETURN          reduce using rule 17 (instruction -> labeled_instr .)
    BREAK           reduce using rule 17 (instruction -> labeled_instr .)
    CONTINUE        reduce using rule 17 (instruction -> labeled_instr .)
    {               reduce using rule 17 (instruction -> labeled_instr .)
    (               reduce using rule 17 (instruction -> labeled_instr .)
    INTEGER         reduce using rule 17 (instruction -> labeled_instr .)
    FLOAT           reduce using rule 17 (instruction -> labeled_instr .)
    STRING          reduce using rule 17 (instruction -> labeled_instr .)
    TYPE            reduce using rule 17 (instruction -> labeled_instr .)
    error           reduce using rule 17 (instruction -> labeled_instr .)
    $end            reduce using rule 17 (instruction -> labeled_instr .)
    }               reduce using rule 17 (instruction -> labeled_instr .)
    ELSE            reduce using rule 17 (instruction -> labeled_instr .)


state 18

    (25) instruction -> compound_instr .

    UNTIL           reduce using rule 25 (instruction -> compound_instr .)
    PRINT           reduce using rule 25 (instruction -> compound_instr .)
    ID              reduce using rule 25 (instruction -> compound_instr .)
    IF              reduce using rule 25 (instruction -> compound_instr .)
    WHILE           reduce using rule 25 (instruction -> compound_instr .)
    REPEAT          reduce using rule 25 (instruction -> compound_instr .)
    RETURN          reduce using rule 25 (instruction -> compound_instr .)
    BREAK           reduce using rule 25 (instruction -> compound_instr .)
    CONTINUE        reduce using rule 25 (instruction -> compound_instr .)
    {               reduce using rule 25 (instruction -> compound_instr .)
    (               reduce using rule 25 (instruction -> compound_instr .)
    INTEGER         reduce using rule 25 (instruction -> compound_instr .)
    FLOAT           reduce using rule 25 (instruction -> compound_instr .)
    STRING          reduce using rule 25 (instruction -> compound_instr .)
    TYPE            reduce using rule 25 (instruction -> compound_instr .)
    error           reduce using rule 25 (instruction -> compound_instr .)
    $end            reduce using rule 25 (instruction -> compound_instr .)
    }               reduce using rule 25 (instruction -> compound_instr .)
    ELSE            reduce using rule 25 (instruction -> compound_instr .)


state 19

    (4) block -> declaration .

    TYPE            reduce using rule 4 (block -> declaration .)
    error           reduce using rule 4 (block -> declaration .)
    PRINT           reduce using rule 4 (block -> declaration .)
    ID              reduce using rule 4 (block -> declaration .)
    IF              reduce using rule 4 (block -> declaration .)
    WHILE           reduce using rule 4 (block -> declaration .)
    REPEAT          reduce using rule 4 (block -> declaration .)
    RETURN          reduce using rule 4 (block -> declaration .)
    BREAK           reduce using rule 4 (block -> declaration .)
    CONTINUE        reduce using rule 4 (block -> declaration .)
    {               reduce using rule 4 (block -> declaration .)
    (               reduce using rule 4 (block -> declaration .)
    INTEGER         reduce using rule 4 (block -> declaration .)
    FLOAT           reduce using rule 4 (block -> declaration .)
    STRING          reduce using rule 4 (block -> declaration .)
    $end            reduce using rule 4 (block -> declaration .)


state 20

    (29) labeled_instr -> ID . : instruction
    (30) assignment -> ID . = expression ;
    (46) expression -> ID .
    (68) expression -> ID . ( expr_list_or_empty )
    (69) expression -> ID . ( error )

    :               shift and go to state 44
    =               shift and go to state 45
    ;               reduce using rule 46 (expression -> ID .)
    +               reduce using rule 46 (expression -> ID .)
    -               reduce using rule 46 (expression -> ID .)
    *               reduce using rule 46 (expression -> ID .)
    /               reduce using rule 46 (expression -> ID .)
    %               reduce using rule 46 (expression -> ID .)
    |               reduce using rule 46 (expression -> ID .)
    &               reduce using rule 46 (expression -> ID .)
    ^               reduce using rule 46 (expression -> ID .)
    AND             reduce using rule 46 (expression -> ID .)
    OR              reduce using rule 46 (expression -> ID .)
    SHL             reduce using rule 46 (expression -> ID .)
    SHR             reduce using rule 46 (expression -> ID .)
    EQ              reduce using rule 46 (expression -> ID .)
    NEQ             reduce using rule 46 (expression -> ID .)
    >               reduce using rule 46 (expression -> ID .)
    <               reduce using rule 46 (expression -> ID .)
    LE              reduce using rule 46 (expression -> ID .)
    GE              reduce using rule 46 (expression -> ID .)
    (               shift and go to state 43


state 21

    (31) choice_instr -> IF . ( condition ) instruction
    (32) choice_instr -> IF . ( condition ) instruction ELSE instruction
    (33) choice_instr -> IF . ( error ) instruction
    (34) choice_instr -> IF . ( error ) instruction ELSE instruction

    (               shift and go to state 46


state 22

    (44) const -> FLOAT .
